[tool.poetry]
name = "idbox_generator"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
include = [
  { path = "idbox_generator/assets", format = [
    "sdist",
    "wheel",
  ] },
  { path = "idbox_generator/data", format = [
    "sdist",
    "wheel",
  ] },
]

[tool.poetry.scripts]
generate = 'idbox_generator.generate:main'

[tool.poetry.dependencies]
python = "^3.9"
jinja2 = "^3.1.4"
cairosvg = "^2.7.1"
docker = "^7.1.0"
pylibdmtx = "^0.1.10"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
