[tool.poetry]
name = "idbox_generator"
version = "0.2.0"
description = ""
authors = []
readme = "README.md"
include = [
  { path = "idbox_generator/assets", format = [
    "sdist",
    "wheel",
  ] },
  { path = "idbox_generator/data", format = [
    "sdist",
    "wheel",
  ] },
]

[tool.poetry.scripts]
generate = 'idbox_generator.generate:main'
test = 'idbox_generator.test:test'

[tool.poetry.dependencies]
python = "^3.9"
jinja2 = "^3.1.4"
cairosvg = "^2.7.1"
docker = "^7.1.0"
pylibdmtx = "^0.1.10"
opencv-contrib-python = "^4.10.0.84"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
ruff = "^0.4.10"

[tool.ruff]
target-version = "py39"
extend-exclude = [".venv"]
unfixable = ["F401"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
